# AIxRS_recycling

./: .gitignore  README.md
CV/: find_pixcel.py  README.md  requirements.txt  yolo_segment_test_code.py  yolo_waste2_test_code.py  yolo_waste3_test_code.py  yolo_waste4_test_code.py  yolo_waste_test_code.py
CV/grasp_detection/: README.md  package.xml
CV/grasp_detection/grasp_detection/: config.py  grasp_detection_node.py
CV/grasp_detection/launch/: grasp_detection.launch.py
CV/local_Test_grasp_detection/: config.py  realsense_runner.py  requirements.txt  test_image_runner.py
CV/modify_grasp_detection/: package.xml
LLM/: README.md
LLM/final_waste_local_test/: test_local.py
LLM/final_waste_local_test/app/: config.py  gemini_service.py  prompts.py
LLM/modify_waste_assistant_ros2/: .env.example
LLM/modify_waste_assistant_ros2/launch/: waste_system.launch.py
LLM/modify_waste_assistant_ros2/waste_assistant_ros2/: config.py  gemini_service.py  mock_motion_server.py  models.py  prompts.py  query_builder_node.py  sort_executor_node.py  test_client.py
LLM/modify_waste_local_test/: .env.example
LLM/modify_waste_local_test/app/: prompts.py
LLM/waste_assistant_ros2/: package.xml
LLM/waste_assistant_ros2/waste_assistant_ros2/: decision_gate_node.py  gemini_reasoner_node.py  hri_node.py  test_client.py
LLM/waste_assistant_ros2_final/: .env.example  package.xml
LLM/waste_assistant_ros2_final/test_data/: detections_example.json
LLM/waste_assistant_ros2_final/waste_assistant_ros2/: README.md  config.py  decision_gate_node.py  decision_logic.py  gemini_reasoner_node.py  gemini_service.py  hri_node.py  models.py  prompts.py  query_builder_node.py  sort_executor_node.py  test_client.py  vision_postprocess.py
LLM/waste_local_test/: test_local.py
LLM/waste_local_test/app/: gemini_service.py
LLM/waste_local_test/test_data/: test_1.m4a
LLM/waste_sort_interfaces/: CMakeLists.txt  package.xml
LLM/waste_sort_interfaces/action/: SortObject.action
final/: calibration.json  main.py
final/test/: agent_camera_only_claude_4.5.py  wrist_explore_node.py  yolo_roi_detect.py
recycle1_PhyAI26/: package.xml  setup.cfg  setup.py
recycle1_PhyAI26/recycle1_PhyAI26/: detect.py  move.py  move_basic.py
