<?xml version="1.0"?>
<package format="3">
  <name>grasp_detection</name>
  <version>0.0.1</version>
  <description>ROS 2 package for ROI-based grasp detection using YOLO segmentation.</description>

  <maintainer email="yesul0718@naver.com">kimyeseul</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
