<?xml version="1.0"?>
<package format="3">
  <name>grasp_detection</name>
  <version>0.0.1</version>
  <description>YOLOv5-based grasp detection ROS2 node</description>

  <maintainer email="yesul0718@naver.com">kimyeseul</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>

  <exec_depend>python3-opencv</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>