<?xml version="1.0"?>
<package format="3">
  <name>waste_assistant_ros2</name>
  <version>0.0.1</version>
  <description>Gemini + decision gate ROS2 package for waste sorting robot.</description>
  <maintainer email="you@example.com">you</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>waste_sort_interfaces</depend>

  <exec_depend>python3-dotenv</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
